// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eventsMapper Should match the snapshot for the event: App Opened 1`] = `
Object {
  "method": "logAppOpen",
  "properties": undefined,
}
`;

exports[`eventsMapper Should match the snapshot for the event: Checkout Started 1`] = `
Object {
  "method": "logBeginCheckout",
  "properties": Object {
    "coupon": "coupon",
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Checkout Step Completed 1`] = `undefined`;

exports[`eventsMapper Should match the snapshot for the event: Order Completed 1`] = `
Object {
  "method": "logPurchase",
  "properties": Object {
    "coupon": "coupon",
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Order Refunded 1`] = `
Object {
  "method": "logRefund",
  "properties": Object {
    "coupon": "coupon",
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product Added to Cart 1`] = `
Object {
  "method": "logAddToCart",
  "properties": Object {
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product Added to Wishlist 1`] = `
Object {
  "method": "logAddToWishlist",
  "properties": Object {
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product Clicked 1`] = `
Object {
  "method": "logSelectItem",
  "properties": Object {
    "item_list_id": "item_list_id",
    "item_list_name": "item_list_name",
    "items": "items",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product List Viewed 1`] = `
Object {
  "method": "logViewItemList",
  "properties": Object {
    "item_list_id": "item_list_id",
    "item_list_name": "item_list_name",
    "items": "items",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product Removed from Cart 1`] = `
Object {
  "method": "logRemoveFromCart",
  "properties": Object {
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Product Viewed 1`] = `
Object {
  "method": "logViewItem",
  "properties": Object {
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Selected Promotion 1`] = `
Object {
  "method": "logViewPromotion",
  "properties": Object {
    "creative_name": "creative_name",
    "creative_slot": "creative_slot",
    "items": "items",
    "location_id": "location_id",
    "promotion_id": "promotion_id",
    "promotion_name": "promotion_name",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Sign-up Form Completed 1`] = `
Object {
  "method": "logSignUp",
  "properties": Object {
    "method": "method",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: Viewed Promotion 1`] = `
Object {
  "method": "logViewPromotion",
  "properties": Object {
    "creative_name": "creative_name",
    "creative_slot": "creative_slot",
    "items": "items",
    "location_id": "location_id",
    "promotion_id": "promotion_id",
    "promotion_name": "promotion_name",
  },
}
`;

exports[`eventsMapper Should match the snapshot for the event: bag 1`] = `
Object {
  "method": "logViewCart",
  "properties": Object {
    "currency": "currency",
    "items": "items",
    "value": "value",
  },
}
`;

exports[`eventsMapper Should return the right method depending on the payload passed for event: Checkout Step Completed with step "1" 1`] = `
Object {
  "method": "logAddShippingInfo",
  "properties": Object {},
}
`;

exports[`eventsMapper Should return the right method depending on the payload passed for event: Checkout Step Completed with step "2" 1`] = `
Object {
  "method": "logSetCheckoutOption",
  "properties": Object {},
}
`;

exports[`eventsMapper for event: Checkout Step Completed with step "3" 1`] = `
Object {
  "method": "logAddPaymentInfo",
  "properties": Object {},
}
`;
